# Rolldown

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cspell.json  deny.toml  package.json  pnpm-workspace.yaml  tsconfig.pure-js.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
crates/bench/: Cargo.toml
crates/bench/Source/: lib.rs
crates/bench/benches/: bundle.rs  remapping.rs  scan.rs
crates/rolldown/: Cargo.toml
crates/rolldown/Source/: bundler.rs  bundler_builder.rs  chunk_graph.rs  lib.rs  type_alias.rs
crates/rolldown/Source/ast_scanner/: impl_visit.rs  mod.rs
crates/rolldown/Source/css/: css_generator.rs  mod.rs
crates/rolldown/Source/ecmascript/: ecma_generator.rs  ecma_module_factory.rs  ecma_module_view_factory.rs
crates/rolldown/examples/: basic.rs  build_bench_rome_ts.rs  build_bench_threejs10x.rs
crates/rolldown_binding/: Cargo.toml  build.rs
crates/rolldown_binding/Source/: bundler.rs  lib.rs  parallel_js_plugin_registry.rs  worker_manager.rs
crates/rolldown_common/: Cargo.toml
crates/rolldown_common/Source/: file_emitter.rs  lib.rs
crates/rolldown_css/: Cargo.toml
crates/rolldown_css/Source/: css_ast.rs  css_compiler.rs
crates/rolldown_ecmascript/: Cargo.toml
crates/rolldown_ecmascript/Source/: ast_snippet.rs  ecma_compiler.rs  lib.rs
crates/rolldown_ecmascript/Source/allocator_helpers/take_in/: impl_for_oxc_allocator.rs  impl_for_oxc_ast.rs  impl_for_oxc_syntax.rs  mod.rs
crates/rolldown_ecmascript/Source/ecma_ast/: gen.rs  helpers.rs  mod.rs  program_cell.rs
crates/rolldown_ecmascript/Source/ext/: mod.rs  span_ext.rs
crates/rolldown_ecmascript/Source/ext/allocator_ext/: mod.rs
crates/rolldown_error/: Cargo.toml
crates/rolldown_error/Source/: diagnostic.rs  error_code.rs  event_kind.rs  lib.rs  type_aliases.rs
crates/rolldown_fs/: Cargo.toml
crates/rolldown_fs/Source/: file_system.rs  lib.rs  memory.rs  os.rs
crates/rolldown_loader_utils/: Cargo.toml
crates/rolldown_loader_utils/Source/: binary_to_esm.rs  json_to_esm.rs  text_to_esm.rs
crates/rolldown_plugin/: Cargo.toml
crates/rolldown_plugin/Source/: lib.rs  plugin.rs  plugin_context.rs  plugin_hook_meta.rs  pluginable.rs  transform_plugin_context.rs  type_aliases.rs
crates/rolldown_plugin_alias/: Cargo.toml
crates/rolldown_plugin_alias/Source/: lib.rs
crates/rolldown_plugin_build_import_analysis/: Cargo.toml
crates/rolldown_plugin_build_import_analysis/Source/: lib.rs  utils.rs
crates/rolldown_plugin_data_url/: Cargo.toml
crates/rolldown_plugin_data_url/Source/: data_url_plugin.rs  utils.rs
crates/rolldown_plugin_dynamic_import_vars/: Cargo.toml
crates/rolldown_plugin_dynamic_import_vars/Source/: dynamic_import_helper.js  lib.rs  parse_pattern.rs  should_ignore.rs  to_glob.rs
crates/rolldown_plugin_import_glob/: Cargo.toml
crates/rolldown_plugin_import_glob/Source/: lib.rs
crates/rolldown_plugin_json/: Cargo.toml
crates/rolldown_plugin_json/Source/: lib.rs
crates/rolldown_plugin_load_fallback/: Cargo.toml
crates/rolldown_plugin_load_fallback/Source/: lib.rs
crates/rolldown_plugin_manifest/: Cargo.toml
crates/rolldown_plugin_manifest/Source/: lib.rs
crates/rolldown_plugin_module_preload_polyfill/: Cargo.toml
crates/rolldown_plugin_module_preload_polyfill/Source/: lib.rs  module_preload_polyfill.js
crates/rolldown_plugin_replace/: Cargo.toml
crates/rolldown_plugin_replace/Source/: plugin.rs  utils.rs
crates/rolldown_plugin_transform/: Cargo.toml
crates/rolldown_plugin_transform/Source/: lib.rs
crates/rolldown_plugin_wasm_fallback/: Cargo.toml
crates/rolldown_plugin_wasm_fallback/Source/: lib.rs
crates/rolldown_plugin_wasm_helper/: Cargo.toml
crates/rolldown_plugin_wasm_helper/Source/: lib.rs  wasm_runtime.js
crates/rolldown_resolver/: Cargo.toml
crates/rolldown_resolver/Source/: error.rs  lib.rs  resolver.rs
crates/rolldown_rstr/: Cargo.toml
crates/rolldown_rstr/Source/: lib.rs  to_str.rs
crates/rolldown_sourcemap/: Cargo.toml
crates/rolldown_sourcemap/Source/: concat_sourcemap.rs  lib.rs  lines_count.rs
crates/rolldown_std_utils/: Cargo.toml
crates/rolldown_std_utils/Source/: option_ext.rs  pretty_type_name.rs
crates/rolldown_testing/: Cargo.toml  _config.schema.json  build.rs
crates/rolldown_testing/Source/: fixture.rs  integration_test.rs  test_config.rs  utils.rs  workspace.rs
crates/rolldown_testing_config/: Cargo.toml
crates/rolldown_testing_config/Source/: lib.rs
crates/rolldown_tracing/: Cargo.toml
crates/rolldown_tracing/Source/: lib.rs
crates/rolldown_utils/: Cargo.toml
crates/rolldown_utils/Source/: base64.rs  bitset.rs  dataurl.rs  debug.rs  ecma_script.rs  extract_hash_pattern.rs  futures.rs  global_reference.rs  js_regex.rs  light_guess.rs  mime.rs  path_buf_ext.rs  path_ext.rs  pattern_filter.rs  percent_encoding.rs  rayon.rs  rustc_hash.rs  sanitize_file_name.rs  unique_arc.rs  xxhash.rs
docs/: package.json
examples/basic-typescript/: hello.ts  index.ts  package.json  rolldown.config.js
examples/basic-vue/: index.js  package.json  rolldown.config.js
examples/par-plugin/: README.md  package.json  tsconfig.json
examples/par-plugin/parallel-babel-plugin/: impl.js
examples/par-plugin/parallel-esbuild-plugin/: impl.js
examples/par-plugin/parallel-noop-plugin/: impl.js  index.js
examples/rollup-plugin-esbuild/: package.json  rolldown.config.js
examples/rollup-plugin-esbuild/Source/: main.ts
scripts/: package.json  tsconfig.json
scripts/meta/: constants.js  utils.js
scripts/misc/: gen-esbuild-test.mjs  tree-sitter-go.d.ts
scripts/misc/setup-benchmark-input/: antd.js  index.js  rolldown-benchcases.js  rome.js  threejs-10x.js  threejs.js  util.js
scripts/snap-diff/: diff.js  diff.ts  index.ts  rewrite.js  rewrite.ts  runner.js  runner.ts  snap-parser.js  snap-parser.ts  types.ts
scripts/snap-diff/summary/: dce.md  default.md  glob.md  importstar.md  importstar_ts.md  loader.md  lower.md  packagejson.md  splitting.md  ts.md
(+255 files in other folders)
