[package]
name = "rolldown_ecmascript"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false
path = "Source/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_error = { workspace = true }
self_cell = { workspace = true }
smallvec = { workspace = true }
