[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_fs"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[features]
memory = []
os = []

[dependencies]
dunce = { workspace = true }
oxc_resolver = { workspace = true }
simdutf8 = { workspace = true }
vfs = { workspace = true }
