[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_plugin_import_glob"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
itoa = { workspace = true }
oxc = { workspace = true }
rolldown_plugin = { workspace = true }
rustc-hash = { workspace = true }
sugar_path = { workspace = true }
