[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_plugin_load_fallback"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
