[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_plugin_manifest"
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
