[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_plugin_transform"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_ecmascript = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
sugar_path = { workspace = true }
