[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_plugin_wasm_helper"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false
path = "Source/lib.rs"

[lints]
workspace = true

[dependencies]
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
