[package]
description = "rolldown_resolver"
name = "rolldown_resolver"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false
path = "Source/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
oxc_resolver = { workspace = true }
rolldown_common = { workspace = true }
rolldown_fs = { workspace = true, features = ["os"] }
sugar_path = { workspace = true }
