[package]
name = "rolldown_sourcemap"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
bench = false
doctest = false
test = false

[dependencies]
memchr = { workspace = true }
oxc = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
