[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rolldown_testing_config"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
rolldown_common = { workspace = true, features = [
	"deserialize_bundler_options",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
