[package]
description = "rolldown_tracing"
name = "rolldown_tracing"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
bench = false
doctest = false
test = false

[dependencies]
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
