[package]
name = "rolldown_utils"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64-simd = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
infer = { workspace = true }
memchr = { workspace = true }
mime = { workspace = true }
oxc = { workspace = true }
phf = { workspace = true }
regex = { workspace = true }
regress = { workspace = true }
rustc-hash = { workspace = true }
sugar_path = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-scoped = { workspace = true, features = ["use-tokio"] }
rayon = { workspace = true }
